# sqv-nfm-lda

./: README.md  pyproject.toml
assets/: lda.ipynb  lsa.ipynb  nmf.ipynb  sports_articles (1).tsv
lesson/: __init__.py
